--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -1,12 +1,34 @@
 body{
     background: url("img/mainFon.png");
     background-size: cover;
+    /*background-color: black;*/
+}
+#background{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    opacity: 80%;
 }
 
 
 /*-------------------------main part-------------------------*/
 
-
+.link{
+    position: absolute;
+    width: 150px;
+    left: 50vw;
+    margin-left: -75px;
+    text-align: center;
+    font-family: "Comic Sans MS";
+    color: rgb(250, 237, 225);
+    text-decoration: none;
+}
+.link:hover{
+    text-decoration: underline;
+}
 #mainWrapper{
     position: absolute;
     display: flex;
@@ -57,7 +79,7 @@ body{
     width: 100%;
     z-index: 1;
 }
-#textCloud{
+#textBlock{
     position: absolute;
     left: 49%;
     top: 5%;
@@ -67,6 +89,7 @@ body{
     text-align: center;
     vertical-align: center;
     z-index: 1;
+    background-color: rgb(250, 237, 225);
 }
 .erotic{
     position: absolute;
@@ -109,7 +132,7 @@ body{
     display: flex;
     width: 24vw;
     background-color: rgb(250, 237, 225);
-    height: 300px;
+    height: 330px;
     border-radius: 15px;
     border: 4px solid rgba(59, 43, 20, 0.7) ;
 }
@@ -125,6 +148,7 @@ body{
 .sendClearWrapper{
     position: relative;
     left: 50%;
+    top: 11px;
     margin-left: -125px;
     display: flex;
     justify-content: space-around;
@@ -147,6 +171,13 @@ body{
     background-color: rgb(59, 43, 20);
     color: rgb(250, 237, 225);
 }
+.inputLabel{
+    position: relative;
+    left: 50%;
+    width: 30px;
+    margin-left: -15px;
+    top: 7px;
+}
 .inputY{
     position: relative;
     width: 80%;
@@ -155,7 +186,6 @@ body{
     height: 30px;
     border-radius: 7px;
     border: 3px solid rgb(125, 75, 29);
-    background-color: rgba(250, 92, 111, 0.3);
     color: rgb(125, 75, 29);
     font-family: "Comic Sans MS";
     font-size: 1.1em;
@@ -174,4 +204,87 @@ body{
     position: relative;
     left: 50%;
     margin-left: -92px;
+}
+
+
+
+
+.tableWrapper{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    background-color: black;
+    opacity: 80%;
+    top: 100vh
+}
+table th,td {
+    border: 3px solid rgba(59, 43, 20, 0.7);
+    width: 16vw;
+    height: 7vh;
+    text-align: center;
+}
+table tr:nth-child(even){
+    background-color: rgb(252, 252, 252);
+    color: black;
+}
+table td {
+    border: none;
+}
+table th {
+    background-color: rgb(252, 252, 252);
+    color: black;
+}
+
+@media screen and (max-width: 1250px) {
+    #background{
+        height: 1200px;
+    }
+    #mainWrapper{
+        position: absolute;
+        flex-direction: column;
+        height: fit-content;
+    }
+    #svgWrapper{
+        width: 550px;
+        height: 550px;
+    }
+    #answer{
+        width: 400px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+    #formWrapper{
+        width: 300px;
+    }
+    .tableWrapper{
+        top: 1200px;
+    }
+    table th,td {
+        width: 16vw;
+        height: 30px;
+    }
+}
+
+@media screen and (max-height: 570px) {
+    #mainWrapper{
+        top: 175px;
+    }
+    #background{
+        height: 700px;
+    }
+    #svgWrapper{
+        width: 550px;
+        height: 550px;
+    }
+    #answer{
+        width: 400px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+    #formWrapper{
+        width: 300px;
+    }
+    .tableWrapper{
+        top: 700px;
+    }
 }
